[package]
name = "example-game-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13.0"
actix-protobuf = "0.9.0"
actix-web = "4.2.1"
actix-web-actors = "4.1.0"
actix-ws = "0.2.5"
chrono = "0.4.23"
env_logger = "0.10.0"
erased-serde = "0.3.24"
fastrand = "1.8.0"
futures-util = "0.3.25"
rayon = "1.6.1"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.91"
typetag = "0.2.5"
uuid = { version = "1.2.2", features = ["v4", "serde"] }
